Allow testing helper calls
This will allow tests to pass through calling function names.

Update to more modern Go versions and fix chicken+egg by importing ourselves at another path.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,24 @@
 language: go
-go: 1.4
+
+sudo: false
+
+os:
+  - linux
+  - osx
+
+go:
+  - 1.9.x
+  - 1.10.x
+  - master
+
+install:
+  - mkdir -p $GOPATH/src/gopkg.in/birkirb/loggers.v1
+  - cp -r $GOPATH/src/github.com/birkirb/loggers/* $GOPATH/src/gopkg.in/birkirb/loggers.v1/
+
+script:
+  - go test -v ./...
+
+matrix:
+  allow_failures:
+    - go: 'master'
+  fast_finish: true
