--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,11 @@
 language: go
 
+go: 
+  - 1.9 # Earliest supported due to introduction of testing#T.helper
+  - 1.11
+
 sudo: false
 
-os:
-  - linux
-  - osx
+go_import_path: gopkg.in/birkirb/loggers.v1
 
-go:
-  - 1.9.x
-  - 1.10.x
-  - master
-
-install:
-  - mkdir -p $GOPATH/src/gopkg.in/birkirb/loggers.v1
-  - cp -r $GOPATH/src/github.com/birkirb/loggers/* $GOPATH/src/gopkg.in/birkirb/loggers.v1/
-
-script:
-  - go test -v ./...
-
-matrix:
-  allow_failures:
-    - go: 'master'
-  fast_finish: true
+install: true
