Allow injecting test helper into mapped loggers.
* Allow testing helper calls. This will allow tests to pass through calling function names.
* Require Go 1.9
* Clarify documentation of new methods.

https://github.com/birkirb/loggers/pull/6

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,11 @@
 language: go
-go: 1.4
+
+go: 
+  - 1.9 # Earliest supported due to introduction of testing#T.helper
+  - 1.11
+
+sudo: false
+
+go_import_path: gopkg.in/birkirb/loggers.v1
+
+install: true
